[gd_scene load_steps=5 format=3 uid="uid://d0n2r4tirb6ri"]

[ext_resource type="Script" path="res://scenes/chess_square.gd" id="1_s7p53"]
[ext_resource type="Texture2D" uid="uid://bvrkgw5ps0j1q" path="res://media/pieces/dark_king.svg" id="2_35cdq"]
[ext_resource type="PackedScene" path="res://scenes/piece_label.tscn" id="2_renxd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3fsj"]
size = Vector2(50, 50)

[node name="ChessSquare" type="Area2D"]
script = ExtResource("1_s7p53")

[node name="SquareColor" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(20, 20)

[node name="SquareBounds" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g3fsj")

[node name="ChessPieceVisual" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_35cdq")

[node name="Label" parent="." instance=ExtResource("2_renxd")]
visible = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
